change shopify page layout to page

--- a/shopify.html
+++ b/shopify.html
@@ -1,5 +1,6 @@
 ---
-layout: default
+layout: page
+title: Shopify stuff
 permalink:/articles/shopify/
 ---
 {% assign posts_count = paginator.posts | size %}
