--- a/shopify.html
+++ b/shopify.html
@@ -6,6 +6,7 @@ permalink: /shopify/
 {% assign posts_count = paginator.posts | size %}
 
 <div class="home">
+  {% if posts_count > 0 %}
     <div class="posts">
       {% for post in paginator.posts %}
         <div class="post py3">
@@ -23,5 +24,7 @@ permalink: /shopify/
     </div>
 
     {% include pagination.html %}
-
+  {% else %}
+    <h1 class='center'>{{ site.text.index.coming_soon }}</h1>
+  {% endif %}
 </div>
